src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__milestone__milestone_screen_loading.snap
---
source: src/tui/snapshot_tests/milestone.rs
expression: terminal.backend()
---
"╔════════════[ 󰐱 Milestones ]════════════╗[1] Issues  [2] Preview                                                       "
"║⠋ Loading milestones...                 ║                                                                              "
"║                                        ║╔═════════════════════════════════[ Issues ]═════════════════════════════════╗"
"║                                        ║║  Select a milestone                                                        ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"╚════════════════════════════════════════╝╚════════════════════════════════════════════════════════════════════════════╝"
"[Enter] View Issues  [Tab] Switch Tab  [r] Run All Open  [Esc] Back                                                     "
