src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__milestone__milestone_screen_with_issues_in_detail.snap
---
source: src/tui/snapshot_tests/milestone.rs
expression: terminal.backend()
---
"╔════════════[ 󰐱 Milestones ]════════════╗[1] Issues  [2] Preview                                                       "
"║ 󰐱 v1.0                                ║                                                                              "
"║  [▓▓▓▓▓▓▓▓░░░░░░░░] 1/2 issues (50%)   ║╔═════════════════════════════════[ Issues ]═════════════════════════════════╗"
"║  󰓒 1    󰝦 1                            ║║> 󰝦 #10 Implement feature A                                                 ║"
"║                                        ║║  󰝦 #11 Fix bug B                                                           ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"║                                        ║║                                                                            ║"
"╚════════════════════════════════════════╝╚════════════════════════════════════════════════════════════════════════════╝"
"[Enter] View Issues  [Tab] Switch Tab  [r] Run All Open  [Esc] Back                                                     "
